--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,12 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+SHOPIFY_APP_NAME=ReConvert
+SHOPIFY_API_KEY=ee226990a3a21f96363a6da16d119269
+SHOPIFY_API_SECRET=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
+SHOPIFY_API_VERSION=2021-01
+SHOPIFY_API_SCOPES="read_products,write_products,read_themes,write_themes,read_script_tags,write_script_tags"
+SHOPIFY_WEBHOOK_1_TOPIC=APP_UNINSTALLED
+SHOPIFY_WEBHOOK_1_ADDRESS=https://reconvert.test/webhook/app-uninstalled
